tests/miz/pass/types/pass_type_elaboration_chained_local_mode_radix_asserted_head_001.miz
definition
  mode BaseModeRadixAssertedHeadDef: BaseModeRadixAssertedHead is set;
end;

definition
  mode OuterModeRadixAssertedHeadDef: OuterModeRadixAssertedHead is BaseModeRadixAssertedHead;
end;

reserve x for OuterModeRadixAssertedHead;
theorem ChainedLocalModeRadixAssertedHeadPayloadBoundary:
  x is BaseModeRadixAssertedHead;
