tests/miz/fail/types/fail_type_elaboration_local_attribute_forward_reference_gap_001.miz
reserve x for marked set;

definition
  let x be set;
  attr MarkedDef: x is marked means thesis;
end;
